# Kubeflow

./: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/kubeflow_proj/: __init__.py  main.py  mian.py
