[project]
name = "kubeflow-proj"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Konstantin", email = "kmedyanikov@kameleoon.com" }
]
dependencies = [
    "k8s>=0.27.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kubeflow_proj"]
